--- a/My_PWM.ioc
+++ b/My_PWM.ioc
@@ -10,14 +10,16 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin2=PA1
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin4=PA1
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -40,6 +42,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -73,20 +79,33 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.APB1Freq_Value=8000000
-RCC.APB2Freq_Value=8000000
+RCC.ADCFreqValue=16000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSourceVirtual,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.PLLCLKFreq_Value=16000000
-RCC.PLLMCOFreq_Value=8000000
+RCC.HCLKFreq_Value=32000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=32000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMCOFreq_Value=16000000
+RCC.PLLMUL=RCC_PLL_MUL4
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.TimSysFreq_Value=8000000
-RCC.USBFreq_Value=16000000
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=32000000
+RCC.USBFreq_Value=32000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation2 CH2
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
+TIM2.Period=255
+TIM2.Prescaler=64
+TIM2.Pulse-PWM\ Generation2\ CH2=64
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
